correcte missing flex-wrap class and plan loop

--- a/static/style.css
+++ b/static/style.css
@@ -18,6 +18,10 @@ section {
     justify-content: center;
 }
 
+.flex-wrap {
+    flex-wrap: wrap;
+}
+
 .lead-homepage h1 {
     font-size: 2.5em;
     margin-bottom: 0px;
